# Hierarchy-ILA-Proof

./: LICENSE  README.md
8051/: CMakeLists.txt
8051/app/: main.cc
8051/include/: datapath.h
8051/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
8051/src/: decoder.cc  irom_xram_integration_port.cc
8051/verilog/: 8051_ila_comp.v  datapath_ila.v  decoder_ila.v  mem_interface_ila.v
AXI/: CMakeLists.txt
AXI/app/: main.cc
AXI/include/: emesh_axi_top.h
AXI/refinement/: ref-rel-inst-cond-w.json  ref-rel-var-map-w.json
AXI/src/: emesh_axi_top.cc
NVDLA_Conv/: CMakeLists.txt
NVDLA_Conv/app/: main.cc
NVDLA_Conv/include/: cacc_config.h  cacc_ila.h  cmac_config.h  cmac_ila.h  conv.h  csc_config.h
NVDLA_Conv/nvdla/cacc/: NV_NVDLA_CACC_assembly_ctrl_clean.v  NV_NVDLA_CACC_calculator_clean.v  delete_lines.py
NVDLA_Conv/nvdla/cmac/: NV_NVDLA_CMAC_core.v
NVDLA_Conv/nvdla/conv/: NV_NVDLA_conv.v
NVDLA_Conv/nvdla/csc/: NV_NVDLA_CSC_sg.v  NV_NVDLA_CSC_sg_clean.v  NV_NVDLA_CSC_wl_clean.v  delete_lines.py
NVDLA_Conv/nvdla/retiming/: NV_NVDLA_RT_csc2cmac_a_clean.v  NV_NVDLA_RT_csc2cmac_b_clean.v  delete_lines.py
NVDLA_Conv/nvdla_ila_composition/: cacc_ila.v  cmac_ila.v  conv.v  csc_ila.v
NVDLA_Conv/refinement/: flat_verification.tcl  ref-rel-inst-cond-conv-comp.json  ref-rel-inst-cond-conv.json  ref-rel-var-map-conv-comp.json  ref-rel-var-map-conv.json
NVDLA_Conv/src/cacc/: cacc_ila.cc
NVDLA_Conv/src/cmac/: cmac_ila.cc
NVDLA_Conv/src/conv_top/: conv_input.cc  conv_instrs.cc  conv_state.cc  conv_top.cc
NVDLA_Conv/src/csc/: csc_instrs.cc
PE/: CMakeLists.txt
PE/app/: main.cc
PE/include/: flex.h
PE/refinement/: ref-rel-inst-cond-petop.json  ref-rel-inst-cond-petop_comp.json  ref-rel-var-map-petop.json  ref-rel-var-map-petop_comp.json
PE/src/: config_state_pe.cc  interface_pe.cc  pe_config_instrs.cc  pe_core_instrs.cc  pe_top.cc  pe_top_intrs.cc
PE/verilog/: PE_top.v  PE_top_comp_ila.v  concat_ActUnit.v  concat_PECore.v  peact_ila.v  pecore_ila.v
Secure_SoC/: CMakeLists.txt
Secure_SoC/app/: main.cc
Secure_SoC/include/: aes_ila.h  secure_soc.h
Secure_SoC/refinement/: ref-rel-inst-cond-comp.json  ref-rel-inst-cond.json  ref-rel-var-map-comp.json  ref-rel-var-map.json
Secure_SoC/src/: aes_ila.cc  soc_inputs.cc  soc_instrs.cc  soc_states.cc  soc_top.cc  soc_util.cc
Secure_SoC/verilog/composition/: aes_ila.v  secure_comp.v
SoC_8051/: CMakeLists.txt
SoC_8051/app/: main.cc
SoC_8051/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
SoC_8051/verilog/: oc8051_gm_top.v  soc_8051.v
